Add navigation bar to index.html
Added a navigation bar with links to Home and Contact Me.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>My Biodata</title>
 </head>
 <body>
+     <!-- Navigation Bar -->
+     <nav>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact Me</a>
+    </nav>
+
+    <!-- Biodata Section -->
     <img src="phang.jpg" alt="phang" width=200, initial-scale=100>
     <h1>My name: Phang Suk Chen</h1>
     <p>Student ID: 100775</p>
